# node-rc

./: .gitignore  CMakeLists.txt  CMakeRC.cmake  HACKING  LICENSE  README.md  VERSION  index.js  package.json  tsconfig.json  tst.txt
include/cmrc/: cmrc.hpp
include/noderc/: noderc.hpp  version.hpp
lib/: base64.node.d.ts  noderc.node.d.ts  noderc.node.js  noderc.node.ts
share/cmake/: NodeRCConfig.cmake.in  noderc_config.cmake.in
share/cmake/Modules/: GetGitRef.cmake  GetNodeAPIHeaders.cmake  GetNodeAPIWrappers.cmake  ToHex.cmake  WriteVersionFile.cmake  WriteVersionHeader.cmake
src/noderc/: addon.cpp  noderc.cpp
test/: index.js
test/views/: layout.pug
tests/noderc/: exists.js  get_filesystem_object.js  hello.js  is_directory.js  is_file.js  open.js  tests.cmake  version.js
